--- a/src/scss/settings/generics.scss
+++ b/src/scss/settings/generics.scss
@@ -20,13 +20,17 @@ html{
 body {
     overflow-x: hidden;
     margin: 0;
-    padding-top: 10rem;
+    padding-top: 8rem;
 }
 
 section{
     padding: 5rem 0;
 
     @include media-breakpoint-down(md) {
+        padding: 3rem 0;
+    }
+
+    @include media-breakpoint-down(sm) {
         padding: 1rem 0;
     }
 }
@@ -51,7 +55,7 @@ a {
 a.anchor {
     display: block;
     position: relative;
-    top: -7.5rem;
+    top: -5.5rem;
     text-align: center;
     visibility: visible;
     margin: auto;
@@ -61,13 +65,13 @@ a.anchor {
 p, h1, h2, h3, h4, h5, h6 {
     display: block;
     width: 100%;
-    margin: 0;
     color: $color-black;
+    white-space: pre-line;
 }
 
 p {
     font-family: 'Roboto Regular';
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     text-align: left;
     margin-bottom: 1.5rem;
     font-weight: 100;
@@ -108,7 +112,7 @@ h1{
     }
 }
 
-h2,h3 {
+h2,h3, h4 {
     font-family: 'Roboto Bold';  
     text-align: left;
     font-size: 4rem;
@@ -132,30 +136,10 @@ h3{
 }
 
 h4{
-    font-family: 'Roboto Regular';  
-    font-size: 3rem;
-    text-align: left;
-    white-space: pre-line;
+    font-size: 2rem;
 
-    b{
-        font-family: 'Roboto Black';  
-    }
-    
-    @include media-breakpoint-down(lg) {     
-        font-size: 2.6rem;
-    }
-
-    @include media-breakpoint-down(md) {
-        font-size: 2.4rem;
-    }
-
-    @include media-breakpoint-down(sm) {
-        font-size: 2.2rem;
-        white-space: normal;
-    }
-
-    @include media-breakpoint-down(xs) {
-        font-size: 2rem;
+    span{
+        font-family: 'Roboto Regular';  
     }
 }
 
