--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "../../node_modules/bootstrap/scss/mixins.scss";
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/aos/src/sass/aos.scss";
+@import "../../node_modules/slick-carousel/slick/slick.scss";
 
 //Settings 
 @import "settings/fonts.scss";
